--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install:client": "(cd ./client && npm install)",
     "install:server": "(cd ./server && npm install)",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "(cd ./client && npm run build:prod)",
+    "build:client": "(cd ./client && npm run build)",
     "build:server": "(cd ./server &&npm run prebuild && npm run build)",
     "start": "npm run start:prod",
     "start:prod": "(cd ./server && npm run start:prod)",
